--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,7 @@
 # BEGIN SAKURA Internet Inc.
+RewriteEngine on
+RewriteCond %{HTTPS} !=on [NC]
+RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [R=301,L]
 <IfModule mod_deflate.c>
     SetOutputFilter DEFLATE
     AddOutputFilterByType DEFLATE text/css
