--- a/.gitignore
+++ b/.gitignore
@@ -50,5 +50,4 @@ wp-blog-header.php
 wp-cron.php
 wp-settings.php
 
-!wp-content/themes/hitchcock
-!wp-content/themes/*
+!wp-content/themes/mythemes/index.php
